5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1582_2896.log
== SUBMITION (2019-03-16 23:49:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas print(var)
print(Python)
-- EXECUTION TIME:
0.222047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:49:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

# Impressao de saidas print(var)
print(Python)
-- EXECUTION TIME:
0.175129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:49:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

print(var)
print(Python)
-- EXECUTION TIME:
0.17827
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:53:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

print(var)
print(Python)
-- EXECUTION TIME:
0.251318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:53:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python")

print(var)
print(Python)
-- EXECUTION TIME:
0.108864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:54:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Phython")

print(var)
print(Python)
-- EXECUTION TIME:
0.176203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:54:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Phython")

print(var)
print(Python)
-- EXECUTION TIME:
0.129165
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 23:54:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome:Phython")

print(var)
print(Python)
-- EXECUTION TIME:
0.185589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:00:35) 
-- CODE:
# Use este codigo como ponto de partida #var = input("Python")

# Leitura de valores de entrada
var = input("Digite o nome:Phython")

print(var)
print(Python)
-- EXECUTION TIME:
0.130644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.139688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.0704999
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/2896/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.153848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.0971231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.0802948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.135142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.128825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.231698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.28025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.192659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.272228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.412702
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.582007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.594796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.678786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.274592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.45646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.600509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.703156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.688831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.795218
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.171846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.219282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.182956
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.506775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.728213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.710655
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.150251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.188083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.301249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.477186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.544547
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.585286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.246163
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.54841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.562673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.514674
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print(Python)
-- EXECUTION TIME:
0.636269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(Python)
NameError: name 'Python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print("Python")
-- EXECUTION TIME:
0.207537
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print("Python")
-- EXECUTION TIME:
0.14653
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print("Python")
-- EXECUTION TIME:
0.125615
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 00:05:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Phython:")

print(var)
print("Python")
-- EXECUTION TIME:
0.21488
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:30:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python") 

# Impressao de saidas
print("Python")
-- EXECUTION TIME:
0.171306
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:30:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python") 

# Impressao de saidas
print("Python")
-- EXECUTION TIME:
0.120484
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:31:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python") 

print(var)
print("Python")
-- EXECUTION TIME:
0.170189
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:31:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python") 

print(var)
print("Python")
-- EXECUTION TIME:
0.18128
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:32:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python") 

print("Python")
-- EXECUTION TIME:
0.155817
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 02:32:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Python") 

print("Python")
-- EXECUTION TIME:
0.196379
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Python
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:43:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print()
-- EXECUTION TIME:
0.235228
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print()
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(python)

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(python)
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(python)
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(python)
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(python)
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(python)
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python")
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python")
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:44:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(python))
-- EXECUTION TIME:
0.155638
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var(python))
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(python))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(python))
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:44:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var(python))
-- EXECUTION TIME:
0.137953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var(python))
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:45:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- EXECUTION TIME:
0.205979
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:45:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- EXECUTION TIME:
0.107757
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:45:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- EXECUTION TIME:
0.125625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:45:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- EXECUTION TIME:
0.094945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var("python"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:45:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saidas
print(var("python"))
-- EXECUTION TIME:
0.0892279
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/2896/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:46:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:46:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:47:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- EXECUTION TIME:
0.164822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:47:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- EXECUTION TIME:
0.12951
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:47:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:48:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:48:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var(""))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome:")

# Impressao de saidas
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input()
# Impressao de saidas
print
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input()
# Impressao de saidas
print
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input()
# Impressao de saidas
print
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input()
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input("Python")
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input("Python")
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input("Python")
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:57) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input("Python")
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input("Python")
# Impressao de saidas
print(var("Python"))
-- EXECUTION TIME:
0.20568
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 5, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var = input("Python")
# Impressao de saidas
print(var("Python"))
-- EXECUTION TIME:
0.194535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2896/main.py", line 5, in <module>
    var = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("Python"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("Python"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
var
# Impressao de saidas
print(var("digite o nome"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var("digite o nome"))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:59:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var()
-- EXECUTION TIME:
0.142198
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 8
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:59:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var()
-- EXECUTION TIME:
0.121048
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 8
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:59:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var()
-- EXECUTION TIME:
0.128208
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 8
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:59:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var()
-- EXECUTION TIME:
0.184316
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 8
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:59:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var()
-- EXECUTION TIME:
0.099715
-- ERROR:
  File "/home/codebench/codes/1582/2896/main.py", line 8
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:26:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var 
-- ERROR:
File "XXXX", line 8
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:26:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython)"
-- ERROR:
File "XXXX", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:27:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython")
-- OUTPUT:
Phython
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:27:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython")
-- OUTPUT:
Phython
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:27:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython")
-- EXECUTION TIME:
0.237604
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Phython
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Phython
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:27:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython")
-- OUTPUT:
Phython
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:27:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython")
-- EXECUTION TIME:
0.155312
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Phython
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Phython
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:27:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print("Phython")
-- OUTPUT:
Phython
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:28:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input
# Impressao de saidas
print("Phython")
-- OUTPUT:
Phython
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:28:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input
# Impressao de saidas
print("Phython")
-- EXECUTION TIME:
0.166934
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Phython
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Phython
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:28:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input
# Impressao de saidas
print("Phython")
-- EXECUTION TIME:
0.146053
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Phython
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Phython
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:28:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")
input
# Impressao de saidas
print("Phython")
-- EXECUTION TIME:
0.162714
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Phython
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Phython
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:54:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = int("Digite o nome: ")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = int("Digite o nome: ")
NameError: name 'int' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:54:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = int("Digite o nome: ")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = int("Digite o nome: ")
NameError: name 'int' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:54:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = int("Digite o nome: ")
NameError: name 'int' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:54:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:54:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:55:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.272039
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
